--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,13 @@
   "options_page": "options.html",
   "browser_action": {
     "default_icon": "weeicon.png",
-    "default_title": "Check my links"
+    "default_title": "Check My Links - Fork"
   },
   "description": "Check My Links is a link checker that crawls through your webpage and looks for broken links.",
   "icons": {
     "128": "icon.png"
   },
-  "name": "Check My Links",
+  "name": "Check My Links - Fork",
   "permissions": [
     "activeTab"
   ],
